Fix profile card spacing on feed

--- a/client/public/styles/profile.scss
+++ b/client/public/styles/profile.scss
@@ -37,9 +37,10 @@
 
 .profile-highlighted {
   background: #ffcc66;
+  padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
-strong {
+.profile-nav-text {
   padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
